fix p spacing on about page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -273,6 +273,9 @@ nav a span {
 
 .about-bio p {
   font-size: 15px;
+}
+
+.about-bio p:first-child {
   padding-top: 40px;
 }
 
